# FonoTB

./: README.md  main.cpp  main.qml
.github/workflows/: build.yml
ClientQml/: .env  CMakeLists.txt  Logger.h  MainWindow.cpp  MainWindow.h  Track.h  TrackModel.cpp  TrackModel.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp  qml.qrc  resources.qrc
ClientQml/qml/: main.qml
Converter/: converter.cpp  converter.hpp  main.cpp
chatik/: server.py
chatik/untitled18/: main.qml
chatik/untitled19/: main.qml
client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  main.qml
front/: CMakeLists.txt  index.html  mainwindow.cpp  mainwindow.h  style.css
html client/: CMakeLists.txt  index.html  mainwindow.h
raw/: linux.txt  ringout.txt  sinus.txt  warcraft.txt
server/: .env  CMakeLists.txt  SimpleHttpFileServer.cpp  SimpleHttpFileServer.h  SimpleServer.cpp  SimpleServer.h  SimpleWebSocketServer.cpp  SimpleWebSocketServer.h  TrackRepository.cpp  TrackRepository.h  main.cpp
stillpushing/build-polytechkiller-Desktop-Debug/: Makefile  polytechkiller  qrc_qml.cpp
stillpushing/polytechkiller/: main.qml
track_manager/: CMakeLists.txt  TrackRepository.cpp  TrackRepository.h  main.cpp
